--- a/NodeKurs(sNulja18st.)/weather-cli/package.json
+++ b/NodeKurs(sNulja18st.)/weather-cli/package.json
@@ -3,14 +3,11 @@
   "version": "1.0.0",
   "description": "CLI for getting weather",
   "main": "index.js",
-  "bin":  "index.js",
-
-
+  "bin": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "keywords": [
     "cli",
     "weather"
@@ -22,12 +19,13 @@
     "type": "git",
     "url": "https://github.com/Altiuss"
   },
-  
-
   "bugs": {
     "url": "https://github.com/Altiuss",
     "email": "altiuss@inbox.lv"
+  },
+  "dependencies": {
+    "axios": "^1.3.3"
   }
+ 
+  
 }
-
-
