--- a/Bek/Lesson5/server/package.json
+++ b/Bek/Lesson5/server/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -13,7 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
